# heimdall

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LOCAL_TESTING_SETUP_COMPLETE.md  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  run_starknet_tests.py  run_tests.py  validate_starknet_migration.py
.claude/: settings.local.json
.claude/agents/: cryptography-architect.md  engineering-lead-advisor.md  python-craftsman.md  python-ic-engineer.md  python-test-architect.md  starknet-python-expert.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  verify-setup.sh
.github/workflows/: ci.yml
application/dotnet_sqs_integration/enclave/: server.py
application/eth1/enclave/: server.py
application/eth1/lambda/: lambda_function.py
application/rds_integration/enclave/: server.py
application/starknet/: API_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  MULTIUSER_DEPLOYMENT.md  MULTIUSER_DESIGN.md  README.md  SECURITY.md  STARKNET_INTEGRATION.md  TROUBLESHOOTING.md
application/starknet/enclave/: Dockerfile  aws_multiuser_integration.py  key_derivation.py  multiuser_server.py  requirements.txt  server.py
application/starknet/lambda/: lambda_function.py
application/starknet/server/: Dockerfile.dev  app.py  multiuser_app.py
application/starknet/user_data/: user_data.sh
config/: __init__.py  settings.py  test_environments.py
docker/dev-tools/: Dockerfile
docker/localstack/: init-aws.sh
docker/nitro-enclave-mock/: Dockerfile  requirements.txt  server.py
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/test-runner/: Dockerfile
docs/technical/: KEY_DERIVATION_IMPROVEMENTS.md  TIMING_ATTACK_FIX_SUMMARY.md
nitro_wallet/: nitro_wallet_stack.py
scripts/: build_kmstool_enclave_cli.sh  coverage_report.py  run_tests.py
tests/: __init__.py  conftest.py  factories.py  starknet_factories.py  starknet_multiuser_factories.py  test_multiuser_key_derivation.py
tests/fixtures/: factories.py  starknet_multiuser_factories.py
tests/fixtures/aws_mocks/: README.md  __init__.py  example_usage.py  integration_helpers.py  kms_mock.py  local_mock_server.py  nitro_enclave_mock.py  secrets_manager_mock.py  test_environment.py  test_fixtures.py
tests/integration/: README_E2E_Tests.md  pytest_e2e.ini  test_docker_containers.py  test_starknet_basic.py  test_starknet_e2e_runner.py  test_starknet_e2e_transaction_signing.py  test_starknet_performance_scale.py  test_starknet_py_integration.py  test_starknet_security_error_scenarios.py
tests/tools/: test_key_derivation_reliability.py  test_simple_derivation.py
tests/unit/: test_eth1_enclave_server.py  test_eth1_lambda.py  test_nitro_wallet_stack.py
tests/unit/crypto/: README.md  run_crypto_tests.py  test_aws_integration.py  test_hkdf_implementation.py  test_key_derivation.py  test_multiuser_key_derivation.py  test_performance_edge_cases.py  test_security_properties.py  test_starknet_crypto.py
tests/utils/: __init__.py  database.py
